<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frm"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="13dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/iridescent"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:text="@string/enterMes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_purple"
        android:gravity="start"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/size3"
        android:textColor="@android:color/background_dark"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="13dp">

        <EditText
            android:id="@+id/row"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/column"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/column"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:gravity="start"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/diff"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/easy"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/normal"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/hard"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RadioGroup>

    <Button
        android:id="@+id/start"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:background="@drawable/play"
        android:padding="13dp"
        android:paddingTop="30dp"
        android:paddingBottom="10dp" />

</LinearLayout>